# baobab-auth-service

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  noxfile.py  pyproject.toml
.codex/rules/: default.rules
.cursor/rules/: 00-global-workflow.mdc  000-core.mdc  10-python-oop.mdc  20-tests-coverage.mdc  30-documentation-rst.mdc  40-git-workflow.mdc  50-no-ai-attribution.mdc
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-user-story.yml  02-feature.yml  03-task.yml
.github/workflows/: ci.yml  integration.yml  release.yml
docs/: conf.py  index.rst
docs/ai_workflow/: workflow.md
docs/ai_workflow/roles/: 00-orchestrateur.md  01-product-owner.md  02-architecte.md  03-developpeur.md  04-relecteur.md  05-securite.md  06-release-manager.md  07-support.md  orchestrateur.md
docs/ai_workflow/state/: dependency_graph.yaml  lock.yaml  queue.yaml
docs/api/: index.rst
docs/contracts/: compatibility.md  exceptions.md  imports.md  models.md  public_api.md  services.md
docs/guides/: index.rst
docs/guides/how-to/: ajouter-une-classe.rst  integration-validation.rst  template-sync.rst
docs/guides/tutorials/: premiers-pas.rst
docs/integrations/: compatibility_matrix.yaml
docs/specifications/: glossary.rst  index.rst
docs/specifications/cahier-des-charges/: README.md
docs/specifications/us/: index.rst
docs/specifications/us/US-001-exemple/: FEAT-001.1-salutations.rst  index.rst
docs/workflow/: README.md  SETUP.md  gates.md  handoff.md
docs/workflow/prompts/: init.md  orchestration.md
docs/workflow/roles/: README.md
scripts/: check_no_ai_attribution.py  check_traceability.py  scaffold.py  setup_github.sh  sync_from_template.sh
src/example_package/: __init__.py  greeter.py  repository.py
tests/unit/example_package/: test_greeter.py  test_repository.py
